force-app/main/default/objects/Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Comparison_Data_Type__c</fullName>
        <label>Comparison Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date (Years Calculated)</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comparison Field (Right)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison_Value__c</fullName>
        <description>The value being used on the right side of the criteria comparison. This field should be populated if you are comparing the left side field to a static value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comparison Value (Right)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Field__c</fullName>
        <description>The API name of the object-field combination being used on the right side of the criteria comparison. This field should be populated if you are comparing the left side field to the value of another field. Example. Account.Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria Field (Left)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Most_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within the enrollment model, some objects are a one to many off of the Program Enrollment. For example, ASI (Annual Student Information). In those cases, we need to know which Criteria record need recalculating. This field will store the Most Recent that this criteria is related to.</description>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The comparison operator used to compare the left and right sides of the criteria.</description>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>CONTAINS</fullName>
                </value>
                <value>
                    <fullName>DOES NOT CONTAIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <description>Within the enrollment model, some objects are a one to many off of the Program Enrollment. For example, ASI (Annual Student Information). In those cases, we need to know which Criteria record need recalculating. This field will store the Question Group that this criteria is related to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <description>Within the enrollment model, some objects are a one to many off of the Program Enrollment. For example, ASI (Annual Student Information). In those cases, we need to know which Criteria record need recalculating. This field will store the school year that this criteria is related to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>School Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLookupValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLookupValue</label>
        <type>Checkbox</type>
    </fields>
    <label>Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comparison_Data_Type__c</columns>
        <columns>Operator__c</columns>
        <columns>Comparison_Value__c</columns>
        <columns>Criteria_Field__c</columns>
        <columns>Question_Group__c</columns>
        <columns>School_Year__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Criteria_Field__c</field>
            <operation>startsWith</operation>
            <value>Enrollment</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>C_Require_Data_Type_with_Comp_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(TEXT(Comparison_Data_Type__c)), NOT(ISBLANK( Comparison_Value__c)))</errorConditionFormula>
        <errorMessage>Data type is required when there is a comparison value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C_Select_Either_Value_or_Field</fullName>
        <active>true</active>
        <description>To ensure that both value and field are not set at the same time.</description>
        <errorConditionFormula>AND( NOT( ISBLANK( Comparison_Field__c ) ) ,  NOT( ISBLANK( Comparison_Value__c ) )  )</errorConditionFormula>
        <errorMessage>A Comparison Field and Comparison Value cannot be set at the same time. Please choose one.</errorMessage>
    </validationRules>
</CustomObject>