force-app/main/default/objects/Criteria__c/validationRules/C_Require_Data_Type_with_Comp_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>C_Require_Data_Type_with_Comp_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Comparison_Data_Type__c)), NOT(ISBLANK( Comparison_Value__c)))</errorConditionFormula>
    <errorMessage>Data type is required when there is a comparison value.</errorMessage>
</ValidationRule>