force-app/main/default/objects/Criteria__c/validationRules/C_Select_Either_Value_or_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>C_Select_Either_Value_or_Field</fullName>
    <active>true</active>
    <description>To ensure that both value and field are not set at the same time.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Comparison_Field__c ) ) ,  NOT( ISBLANK( Comparison_Value__c ) )  )</errorConditionFormula>
    <errorMessage>A Comparison Field and Comparison Value cannot be set at the same time. Please choose one.</errorMessage>
</ValidationRule>