force-app/main/default/objects/Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comparison_Data_Type__c</columns>
    <columns>Operator__c</columns>
    <columns>Comparison_Value__c</columns>
    <columns>Criteria_Field__c</columns>
    <columns>Question_Group__c</columns>
    <columns>School_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Criteria_Field__c</field>
        <operation>startsWith</operation>
        <value>Enrollment</value>
    </filters>
    <label>All</label>
</ListView>